--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mantine-form-yup-resolver": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image": "^4.1.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.11.2",
     "swr": "^2.1.5",
